fix: align items in header when wide screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,6 @@ hr {
 #title-box {
     position: relative;
     float: left;
-    overflow-wrap: normal;
 }
 
 #title-box>h2 {
@@ -336,7 +335,6 @@ a>i {
 
 @media only screen and (max-width:372px) {
     .header-grid {
-        display: grid;
         grid-template-columns: 1fr;
         grid-auto-rows: minmax(5rem, auto);
         grid-template-areas:
@@ -363,16 +361,28 @@ a>i {
 
 }
 
+@media only screen and (min-width: 786px) {
+    .header-grid {
+        grid-template-columns: 10rem 300px 1fr;
+        grid-auto-rows: minmax(5rem, auto);
+        grid-template-areas:
+            "head-logo head-heading head-menu";
+
+    }
+
+    .logo {
+        margin-bottom: 2.2rem;
+    }
+
+    #title-box > h2 {
+        margin-top: 0;
+    }
+}
+
 /* INDEX PAGE MEDIA QUERIES */
 
 
 @media only screen and (min-width:786px) {
-    .header-grid {
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-areas:
-            ";
-    }
-
     .blurb-grid {
         grid-template-columns: 2fr 6fr 2fr;
     }
